# gmocli

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  emocli.js  package.json
data/emoji/: emoji.json
data/emojis/: emojis.json
data/gitmoji/: gitmoji.json
scripts/: update-emoji-data.sh
src/: lib.rs  main.rs
