[package]
name = "emocli"
description = "this crate has been moved to resolve a naming conflict with a similar project"
version = "0.9.0"
authors = ["Doug Elkin <doug@dougelkin.com>"]
readme = "README.md"
repository = "https://github.com/duhdugg/gmocli/tree/crates.io/emocli-deprecation"
license = "MIT"
keywords = ["emojis"]
categories = ["command-line-utilities"]
edition = "2021"
