[package]
name = "gmocli"
description = "gmocli provides a command-line interface for searching emoji characters with associated gitmoji descriptions."
version = "1.1.0"
authors = ["Doug Elkin <doug@dougelkin.com>"]
readme = "README.md"
repository = "https://github.com/duhdugg/gmocli/"
license = "MIT"
keywords = ["emojis"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
json = "0.12.4"
